# chronolog

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CLAUDE.md  CLAUDE_MEMORIES.md  Dockerfile  README.md  SPEC.md  UI-SPEC.md  docker-compose.yml  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: context7-registry.md  settings.local.json
.claude/commands/: cleanup-check.md  cleanup.md  e2e-offline-cycle.md  e2e-setup.md  extract-session-pr.md  review-session.md
.claude/session-reviews/: 2026-02-11-powersync-migration.md
config/: dev-jwk.json  dev-public.pem  init-db.sql  powersync.yaml  sync_rules.yaml
docs/: DEPLOYMENT.md  EPIC-OFFLINE-SYNC.md  POWERSYNC_ACCOMMODATIONS.md  POWERSYNC_MIGRATION.md  backlog-client.md  backlog-infrastructure.md  backlog.md  docker-stack.md  platform-abstraction.md
docs/contracts/: data-service-interface.md  docker-stack.md
docs/sprints/: readme.md  sprint-001-CL.md  sprint-001-GK.md  sprint-001-IF.md  sprint-002-CL.md  sprint-002-IF.md  sprint-003-IF.md  sprint-004-CL.md
drizzle/: 0000_outgoing_marrow.sql  0001_simple_nicolaos.sql  0002_milky_purple_man.sql  0003_curious_magma.sql  0004_dizzy_clea.sql  0005_friendly_polaris.sql  0006_far_norrin_radd.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  (+3 more)
prompts/: team-pm-CL.md  team-pm-GK.md  team-pm-IF.md
src/: app.d.ts  hooks.server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+219 files in other folders)
