[package]
name = "chronolog"
version = "0.0.1"
description = "Time tracking & notes for consulting work"
authors = [""]
edition = "2021"

[lib]
name = "chronolog_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
